gcc/testsuite/rust/rustc/ui/resolve/issue-24968.rs
fn foo(_: Self) {
// { dg-error ".E0411." "" { target *-*-* } .-1 }
}

fn main() {}

